non-msrv-tests/tests/ui/field_option_syntax.stderr
error: unexpected option syntax
 --> tests/ui/field_option_syntax.rs:3:4
  |
3 |     #[derive_where = "default"]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^
